bin_PROGRAMS =
noinst_PROGRAMS =
lib_LTLIBRARIES =

ACLOCAL_AMFLAGS = -I m4
CLEANFILES =

AM_CPPFLAGS =

AM_CFLAGS = -fno-merge-all-constants -fPIC -std=gnu11 -funsigned-char -fvisibility=hidden -O2 -Wall -Wextra -Werror
AM_LDFLAGS =

include docs/Makefile.am
include src/Makefile.am
include tests/Makefile.am
